--- a/Unidad 5 Lab/Views/Informacion/Busqueda.cshtml
+++ b/Unidad 5 Lab/Views/Informacion/Busqueda.cshtml
@@ -4,30 +4,30 @@
     ViewBag.Title = "MostrarListas";
 }
 
-<h2>Lista de Estampillas de @ViewBag.Nombre</h2>
+<h2>Listas de Estampillas de @ViewBag.Nombre</h2>
 
-
-<table class="table">
-    <tr>
+<table class="table table-hover">
+    <tr class="table-light">
         <th>Opciones</th>
+        <th></th>
+        <th></th>
     </tr>
-    <tr></tr>
-    <tr></tr>
+
 
     <tr class="table-dark">
         <td>
             @Html.ActionLink("Faltantes", "MostrarListaEscogida", new { lista = 1 })
         </td>
         <td>
-            @Html.ActionLink("Collecionadas", "MostrarListaEscogida", new { lista = 2 })
+            @Html.ActionLink("Colecionadas", "MostrarListaEscogida", new { lista = 2 })
         </td>
         <td>
             @Html.ActionLink("Disponibles", "MostrarListaEscogida", new { lista = 3 })
         </td>
     </tr>
+
+
 </table>
-
-
 <table class="table table-hover">
     <tr class="table-light">
         <th>
@@ -39,21 +39,21 @@
         <th>
             @Html.DisplayNameFor(model => model.obtenida)
         </th>
-        <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr class="table-dark">
-        <td >
-            @Html.DisplayFor(modelItem => item.numero)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.cantidad)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.obtenida)
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr class="table-dark">
+            <td>
+                @Html.DisplayFor(modelItem => item.numero)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.cantidad)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.obtenida)
+            </td>
+        </tr>
+    }
 
 </table>
