--- a/Unidad 5 Lab/Views/Informacion/Carga.cshtml
+++ b/Unidad 5 Lab/Views/Informacion/Carga.cshtml
@@ -2,15 +2,19 @@
     ViewBag.Title = "Carga de archivo";
 }
 
-<h2>Carga el archivo y la cantidad de dato por nodo para continuar</h2>
+<div class="jumbotron">
+    <h1 class="display-3">Carga del archivo</h1>
+    <p class="lead">Carga la informacion del album que tienes</p>
+    <hr class="my-4">
+    <p class="lead">
+        @using (Html.BeginForm("Upload", "Informacion", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
+            <p>Sube el archivo</p>
+            <input type="file"  name="file" />
+            <hr />
+            <input type="submit" value="Subir" class="btn btn-outline-success" />
+        }
+    </p>
+    <h6>@ViewBag.Msg</h6>
+</div>
 
-<section>
-
-    @using (Html.BeginForm("Upload", "Informacion", FormMethod.Post, new { enctype = "multipart/form-data" }))
-    {
-        <input type="file" name="file" />
-        <input type="submit" value="Subir" class="btn btn-primary" />
-    }
-
-    <h2>@ViewBag.Msg</h2>
-</section>
