--- a/Unidad 5 Lab/Views/Informacion/Carga.cshtml
+++ b/Unidad 5 Lab/Views/Informacion/Carga.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1 class="display-3">Carga del archivo</h1>
-    <p class="lead">Carga la informacion del album que tienes</p>
+    <h2 class="display-3">UEFA Champions League: Carga del archivo</h2>
+    <p class="lead">Carga la informacion del album que tienes y mira todo tu progreso</p>
     <hr class="my-4">
     <p class="lead">
         @using (Html.BeginForm("Upload", "Informacion", FormMethod.Post, new { enctype = "multipart/form-data" }))
