--- a/Unidad 5 Lab/Views/Informacion/Faltantes.cshtml
+++ b/Unidad 5 Lab/Views/Informacion/Faltantes.cshtml
@@ -4,11 +4,14 @@
     ViewBag.Title = "Faltantes";
 }
 
-<h2>Estampillas Faltantes de Todo el Album</h2>
+<h3>UEFA Champions League: Estampillas Faltantes de Todo el Album</h3>
 
+<p>
+    @Html.ActionLink("Regresar a Menu Principal", "Index")
+</p>
 
 <table class="table table-hover">
-    <tr class="table-light">
+    <tr class="table">
         <th>
             @Html.DisplayNameFor(model => model.NumeroEstampa)
         </th>
@@ -18,11 +21,11 @@
     </tr>
 
 @foreach (var item in Model) {
-    <tr class="table-dark">
+    <tr class="table">
         <td>
             @Html.DisplayFor(modelItem => item.NumeroEstampa)
         </td>
-        <td>
+        <td class="table-dark">
             @Html.DisplayFor(modelItem => item.Equipo)
         </td>
     </tr>
