--- a/Unidad 5 Lab/Views/Informacion/MostrarListas.cshtml
+++ b/Unidad 5 Lab/Views/Informacion/MostrarListas.cshtml
@@ -4,8 +4,11 @@
     ViewBag.Title = "MostrarListas";
 }
 
-<h2>Lista de Estampillas de @ViewBag.Nombre</h2>
+<h2>UEFA Champions League: Lista de Estampillas de @ViewBag.Nombre</h2>
 
+<p>
+    @Html.ActionLink("Regresar a Menu Principal", "Index")
+</p>
 
 <table class="table">
     <tr>
@@ -18,7 +21,7 @@
         <td>
             @Html.ActionLink("Faltantes", "MostrarListaEscogida", new { lista = 1 })
         </td>
-        <td>
+        <td class="table-light">
             @Html.ActionLink("Collecionadas", "MostrarListaEscogida", new { lista = 2 })
         </td>
         <td>
@@ -29,7 +32,7 @@
 
 
 <table class="table table-hover">
-    <tr class="table-light">
+    <tr class="table">
         <th>
             @Html.DisplayNameFor(model => model.numero)
         </th>
@@ -43,11 +46,11 @@
     </tr>
 
 @foreach (var item in Model) {
-    <tr class="table-dark">
+    <tr class="table">
         <td >
             @Html.DisplayFor(modelItem => item.numero)
         </td>
-        <td>
+        <td class="table-dark">
             @Html.DisplayFor(modelItem => item.cantidad)
         </td>
         <td>
