--- a/Unidad 5 Lab/Views/Informacion/Index.cshtml
+++ b/Unidad 5 Lab/Views/Informacion/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Index";
 }
 <h6>@ViewBag.Msg</h6>
-<h2>Menu Principal</h2>
+<h2>UEFA Champions League: Menu Principal</h2>
 
 
 <h3>Buscar Equipo</h3>
@@ -11,7 +11,7 @@
 @using (Html.BeginForm("Busqueda", "Informacion", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <input type="text" name="Llave" />
-    <input type="submit" value="Buscar" class="btn btn-primary" />
+    <input type="submit" value="Buscar" class="btn btn-outline-success" />
 }
     <p>@ViewBag.Msg</p>
 
@@ -19,7 +19,7 @@
     @Html.ActionLink("Mostrar estampillas faltantes", "Faltantes")
 </p>
 <table class="table table-hover">
-    <tr class="table-light">
+    <tr class="table">
         <th>
             EQUIPO
         </th>
@@ -30,12 +30,12 @@
 
     @foreach (var item in Unidad_5_Lab.Singleton.Data.Instancia.Equipos)
     {
-        <tr class="table-dark">
+        <tr class="table">
             <td>
                 @Html.DisplayFor(modelItem => item)
             </td>
 
-            <td>
+            <td class="table-dark">
                 @Html.ActionLink("Ver Equipo", "MostrarListas", new { Llave = item }) 
             </td>
         </tr>
