--- a/Unidad 5 Lab/Views/Informacion/Carga.cshtml
+++ b/Unidad 5 Lab/Views/Informacion/Carga.cshtml
@@ -17,4 +17,15 @@
     </p>
     <h6>@ViewBag.Msg</h6>
 </div>
+<audio 
+       id= "demo" src="~/Sources/audio.mp3">
+       <source src="~/Sources/audio.mp3" type="audio/mp3"/>
+</audio>
+<div>
+    <button onclick="document.getElementById('demo').play()">Reproducir Audio</button>
+    <button onclick="document.getElementById('demo').pause()">Pausar Audio</button>
+    <button onclick="document.getElementById('demo').volume+=0.1">Aumentar volumen</button>
+    <button onclick="document.getElementById('demo').volume-=0.1()">Disminuir volumen</button>
+
+</div>
 
